@@ -12,8 +12,8 @@
 
   <adapter name="land.copernicus.content.atblob"
     for="plone.app.blob.interfaces.IATBlob"
-    factory=".subtypes.ATBlobExtender" />
-    
+    factory=".subtypes.ATBlobModifier" />
+
    <subscriber
     for="Products.ATContentTypes.interface.IATFile zope.lifecycleevent.interfaces.IObjectModifiedEvent"
     handler=".add.handler"
